<resources xmlns:https="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Liquid Galaxy Controller</string>
    <string name="tittle">Liquid Galaxy Controller</string>
    <string name="action_settings">Settings</string>
    <string name="action_resetDB">Reset Database</string>
    <string name="POIs_button">POIS</string>
    <string name="TOURs_button">TOURs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Administration tools</string>
    <string name="title_activity_admin">Liquid Galaxy Tools</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_pass">Incorrect Password</string>
    <string name="new_poi">New POI</string>
    <string name="new_category">New Category</string>
    <string name="new_tour">New TOUR</string>
    <string name="create_poi">Create POI</string>
    <string name="create_category">Create Category</string>
    <string name="create_tour">Create Tour</string>
    <string name="update_category">Update Category</string>
    <string name="update_tour">Update Tour</string>
    <string name="update_poi">Update POI</string>
    <string name="add_pois">Add POIs</string>
    <string name="categories_button">Categories</string>
    <string name="edit_poi">Edit</string>
    <string name="delete_poi">Delete</string>
    <string name="title_activity_create_item">New Item</string>
    <string name="title_activity_update_item">Update Item</string>
    <string name="new_poi_here">New POI inside this category</string>
    <string name="new_tour_here">New TOUR inside this category</string>
    <string name="new_category_here">New Category inside this category</string>
    <string name="see_all">See all elements</string>
    <string name="see_by_category">See elements by category</string>
    <string name="next_subcategory">See subcategory</string>
    <string name="back">Back</string>
    <string name="back_start">Back to Start</string>
    <string name="global_interval_text">Duration of each POI (25 by default)</string>
    <string name="tour_pois">Tour POIs</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_lgpc">Liquid Galaxy POIs Controller</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_lgpcadmin">Liquid Galaxy Administration</string>
    <string name="inst_send_POI_tittle"><u>Instructions to send a POI to Liquid Galaxy system:</u></string>
    <string name="inst_send_POI_">1.	Check whether all the settings are correct by making click on ‘Settings’ option inside the menu located on the main screen’s top right corner. If they are incorrect, modify them. The settings to check are: user name, password, host IP and port.\n2.	After checking settings correctness, you are able to select one POI to watch it in LG screens.\n</string>
    <string name="inst_send_TOUR_tittle"><u>Instructions to send a Tour to Liquid Galaxy system:</u></string>
    <string name="inst_send_TOUR">1.	Check whether all the settings are correct by making click on ‘Settings’ option inside the menu located on the main screen’s top right corner. If they are incorrect, modify them. The settings to check are: user name, password, host IP and port.\n2.	After checking settings correctness, you are able to select one POI to watch it in LG screens.\n3.	To stop the Tour view in the LG screens, click on the red STOP button located on the bottom right corner of the main screen.\n</string>
    <string name="icons_tittle"><u>Icons meaning</u></string>
    <string name="add">It has two functionalities: the first and most used works in order to add a new item (POI, Tour or Category) inside the data base; the other is used to add an existing POI inside a Tour when the administration user is creating or updating it.</string>
    <string name="edit">Its functionality is to edit one existing item, being a POI, Tour or Category.</string>
    <string name="cancelButton">Cancels any operation which could consists in creating, updating, adding…</string>
    <string name="delete">Removes an existing item, being a POI, Tour or Category.</string>
    <string name="confirm">Confirms one action as creating or updating one item.</string>
    <string name="stop">Stops the Tours view on one Liquid Galaxy system.</string>
    <string name="addBox">It is used to add one item (POI, Tour or Category) inside the category which is current shown in the screen, better said, it is added inside the category that the user is seeing on the screen.</string>
    <string name="searchText">When user clicks on it, the place written inside the field of the left side is searched in the Liquid Galaxy system.</string>
    <string name="import_pois_tittle"><u>Instructions to import POIs:</u></string>
    <string name="import_introduction">To be able to import POIs, you must keep an eye on the following mandatory steps, but I firstly have to say that the importation process would be absolutely effective or not depending on the file explorer you use. The once that always works is the once called Root Explorer: <a href="https://play.google.com/store/apps/details?id=com.speedsoftware.rootexplorer&amp;hl=es">Root Explorer Download</a></string>
    <string name="import_instructions">1.	Create one folder and put some place-marks in Google Earth corresponding on the POIs you want to save.\n2.	Save that place (foler with all POIs) and export it with a kmz extension.\n3.	Extract the <i>doc.kml</i> file which is inside the kmz that you have just created.\n4.	Download and execute the script of the following link: <a href="https://github.com/asherat/LG_Benchmarking/blob/master/Tools/kml2query.sh">KML to query.txt</a> by typing in a console: <i>sh kml2query.sh doc.kml</i>\n5.	Now you get a <i>query.txt</i> file. This file contains your POIs. Finally, you only have to change its name and set the Category name where you want the POIs to be saved.\n6.	Save that <i>CATEGORY_NAME.txt</i> file inside your device.\n7.	After these steps, go to your LGPC app, travel to the Administration Tools section and click on IMPORT POIS button.\n8.	Select your file explorer, preferably Root Explorer once, and select the X.txt file you want to import.\n
</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="more_information">All the complete information to help you with the Liquid Galaxy POIs Controller correct use is in: <a href="https://github.com/LiquidGalaxyLAB/Liquid-Galaxy-POIs-Controller/wiki">Liquid Galaxy POIs Controller Wiki</a>\n</string>
    <string name="import_pois_dialog_title">Import POIS</string>
    <string name="import_pois_dialog_msg">Choose the way you want to import POIS</string>
    <string name="import_pois_dialog_fromFile">Import from file</string>
    <string name="import_pois_dialog_fromPW">Import from Physical Web Beacon</string>
    <string name="discovery_service_prefs_key">org.physical_web.physicalweb.DISCOVERY_SERVICE_PREFS</string>
    <plurals name="numFoundBeacons">
        <item quantity="one">Beacon Nearby</item>
        <item quantity="other">Beacons Nearby</item>
    </plurals>
    <string name="summary_notification_pull_down">Pull down to see them.</string>
    <string name="nearby_beacon_favicon_content_description">favicon for the given URL for this entry</string>
    <string name="notification_view_more_beacons">View more beacons</string>
    <string name="empty_nearby_beacons_list_text">Searching for beacons</string>
    <string name="title_nearby_beacons">Found Physical Web Beacons</string>
    <string name="importingContents">Importing Contents</string>
    <string name="parsingError">Parsing Document Error</string>
    <string name="viewing_poi">Viewing POI in LG</string>
    <string name="parsingContents">Reading contents from Physical Web Beacon</string>
    <string name="something_wrong">Ops! Something went wrong</string>
    <string name="connection_failure">Error connecting with Liquid Galaxy system. Try changing username, password, port or the host ip</string>
    <string name="please_enter_search">Please, first type some place to search.</string>
    <string name="searching">Searching…</string>
    <string name="sending_command">Sending Command to LG</string>
    <string name="getting_connection">Getting Connection to LG</string>
    <string name="desc_lg_icon">Liquid Galaxy</string>
    <string name="context_menu_edit_task">Edit task</string>
    <string name="context_menu_launch_task">Launch Script in Liquid Galaxy</string>
    <string name="context_menu_delete_task">Delete Task</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_task_header">Add New Task</string>
    <string name="save_new_task">Save</string>
    <string name="new_task_script">Execution Script</string>
    <string name="new_task_description">Task Description</string>
    <string name="new_task_name">Task Title</string>
    <string name="empty_name_error">The name must not be empty</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_added_ok">The task was successfully created</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_updated_ok">The task was successfully updated</string>
    <string name="name">Name</string>
    <string name="altitude_prompt">Elevation Type</string>
    <string name="place_visit">Place to visit</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="heading">Heading</string>
    <string name="tilt">Tilt</string>
    <string name="range">Range</string>
    <string name="global_interval_tour_text">Global interval (in seconds) for each POI</string>
    <string name="error_galaxy">Error connecting with Liquid Galaxy. Please, try changing settings.</string>
    <string name="error_reading_pois"><![CDATA[Error reading POIs. Remember POI name must be between two \'@\' and other features between \'<featureName>\' fields.]]></string>
    <string name="select_task_logo">Select a Logo for this task</string>
    <string name="task_logo">Task Logo</string>
    <string name="update_task_logo">Change Task Logo</string>
    <string name="delete_task_logo">Remove Task Logo</string>
    <string name="logOut">Log Out</string>
    <string name="help">Help</string>
    <string name="administration_tools">Administration Tools</string>
    <string name="category">CATEGORY</string>
    <string name="poi">POI</string>
    <string name="context_menu_stop_task">Stop Task</string>
    <string name="visibility">Visibility</string>
    <string name="action_exportDB">Export Database to local storage</string>
    <string name="controller">Open Controller</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="aboutDocText1">This app has been developed thanks to GSOC 2016 Program as a continuation of a GSOC 2015 Project</string>
    <string name="aboutDocText2">Developed originally by Rafa Durán Sàez(rafaduransaez@gmail.com) and continued by Ivan Josa Llovera (ivanjosallovera@gmail.com)</string>
    <string name="aboutDocText3">https://github.com/LiquidGalaxyLAB/Liquid-Galaxy-POIs-Controller.git</string>
    <string name="aboutDocText4">Developed thanks to the TIC Laboratories of the Scientific Park of Lleida, Liquid Galaxy LAB &amp; LleidaDrone LAB,  Polytechnic School of Lleida, End Point Corp (NY), Wonderama LAB from Western University (Sydney), Gigabyte, Benq, HP, Corsair, and  Hemav Academics.</string>
    <string name="hidden">Hidden</string>
    <string name="visible">Visible</string>
</resources>