<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gsoc.ijosa.liquidgalaxycontroller.com.gsoc.ijosa.liquidgalaxycontroller.LGPCAdminActivity">

    <item
        android:id="@+id/action_information_help"
        android:orderInCategory="97"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/reset_db"
        android:orderInCategory="99"
        android:title="@string/action_resetDB"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_db"
        android:orderInCategory="99"
        android:title="@string/action_exportDB"
        app:showAsAction="never" />


    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/logOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
