<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rafa.liquidgalaxypoiscontroller.AdminFragment">


    <Button
        android:id="@+id/pois_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/POIs_button"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/tours_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/pois_management"
        android:text="@string/TOURs_button"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/categories_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tours_management"
        android:text="@string/categories_button"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/management_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pois_management"
        />

    <Button
        android:id="@+id/new_poi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/categories_management"
        android:text="@string/new_poi"
        android:visibility="gone"/>
    <Button
        android:id="@+id/new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/categories_management"
        android:text="@string/new_category"
        android:visibility="gone"/>
    <Button
        android:id="@+id/new_tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/categories_management"
        android:text="@string/new_tour"
        android:visibility="gone"/>

    <Button
        android:id="@+id/new_poi_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/new_poi"
        android:text="@string/new_poi_here"
        android:visibility="gone"/>
    <Button
        android:id="@+id/new_category_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/new_category"
        android:text="@string/new_category_here"
        android:visibility="gone"/>
    <Button
        android:id="@+id/new_tour_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/new_tour"
        android:text="@string/new_tour_here"
        android:visibility="gone"/>

    <Button
        android:id="@+id/admin_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:text="@string/logOut"
        android:textColor="@color/white" />


</RelativeLayout>

