<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/aboutDocHeader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:text="@string/aboutDocText1" />


    <TextView
        android:id="@+id/aboutDocHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:text="@string/aboutDocText2" />

    <TextView
        android:id="@+id/aboutDocHeader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/github_32"
        android:text="@string/aboutDocText3" />

    <TextView
        android:id="@+id/aboutDocHeader4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/aboutDocText4" />


    <Button
        android:id="@+id/aboutDialogButtonOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/close" />

</LinearLayout>


