<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rafa.liquidgalaxypoiscontroller.CreateItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/categorynameInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <EditText
                android:id="@+id/category_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dip"
                android:hint="@string/name"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hideInputlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <Switch
                android:id="@+id/switchButtonHide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/visibility"
                android:textOff="@string/hidden"
                android:textOn="@string/visible" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fatherSpinnerInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1">
        <Spinner
            android:id="@+id/father_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/cancel_come_back"
        android:src="@drawable/ic_check_white_24dp"
        android:text="@string/create_category"
        app:backgroundTint="@color/green" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/update_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/cancel_come_back"
        android:src="@drawable/ic_check_white_24dp"
        android:text="@string/update_category"
        android:visibility="gone"
        app:backgroundTint="@color/green" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancel_come_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close_white_24dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/red" />


</RelativeLayout>
