<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:divider="?android:attr/dividerVertical"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rafa.liquidgalaxypoiscontroller.CreateItemFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:hint="@string/name" />
            <EditText
                android:id="@+id/visited_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:hint="@string/place_visit" />
            <EditText
                android:id="@+id/longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/longitude"
                android:inputType="number" />
            <EditText
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/latitude"
                android:inputType="number" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/altitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/altitude"
                android:inputType="number" />
            <EditText
                android:id="@+id/heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/heading"
                android:inputType="number" />
            <EditText
                android:id="@+id/tilt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/tilt"
                android:inputType="number" />
            <EditText
                android:id="@+id/range"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/range"
                android:inputType="number" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/altitudeMode"
                android:prompt="@string/altitude_prompt" />

            <ToggleButton
                android:id="@+id/toggleButtonHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="Visible"
                android:textOn="Hidden" />


            <Spinner
                android:id="@+id/categoryID_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Map -->
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_weight="2" />

    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create_poi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/cancel_come_back"
                android:src="@drawable/ic_check_white_24dp"
                android:text="@string/create_poi"
                app:backgroundTint="@color/green" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/update_poi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/cancel_come_back"
                android:src="@drawable/ic_check_white_24dp"
                android:text="@string/update_poi"
                android:visibility="gone"
                app:backgroundTint="@color/green" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cancel_come_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close_white_24dp"
                android:text="@string/cancel"
                app:backgroundTint="@color/red" />
        </RelativeLayout>

</LinearLayout>
