<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_poi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_poi" />
        <Button
            android:id="@+id/delete_poi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_poi" />

        <!-- Maybe I would have to change the ID of the following button-->
        <Button
            android:id="@+id/cancel_poi_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>