<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.example.rafa.liquidgalaxypoiscontroller.Help">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/inf_titlePOIS"
            android:text="@string/inst_send_POI_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:scrollbars="vertical"/>
        <TextView
            android:id="@+id/inf_POIS"
            android:text="@string/inst_send_POI_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inf_titlePOIS"
            android:scrollbars="vertical"/>
        <TextView
            android:id="@+id/inf_titleTOURS"
            android:text="@string/inst_send_TOUR_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_POIS"
            android:textStyle="bold"
            android:scrollbars="vertical"/>
        <TextView
            android:id="@+id/inf_TOURS"
            android:text="@string/inst_send_TOUR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_titleTOURS"
            android:scrollbars="vertical"/>
    </LinearLayout>

</ScrollView>
